--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<app-navbar></app-navbar>
+<app-hero></app-hero>
+<app-projects></app-projects>
+<app-about></app-about>
+<app-education></app-education>
+<app-contact></app-contact>
+<footer class="p-6 md:px-12 text-center text-sm text-gray-500">
+  <p>&copy; 2025 Ndivho Nemutshili. All rights reserved.</p>
+</footer>
