--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,9 +1,12 @@
-<app-navbar></app-navbar>
-<app-hero></app-hero>
-<app-projects></app-projects>
-<app-about></app-about>
-<app-education></app-education>
-<app-contact></app-contact>
-<footer class="p-6 md:px-12 text-center text-sm text-gray-500">
-  <p>&copy; 2025 Ndivho Nemutshili. All rights reserved.</p>
-</footer>
+<div class="bg-gray-900 text-gray-200 min-h-screen font-sans">
+  <app-navbar></app-navbar>
+  <app-hero></app-hero>
+  <app-projects></app-projects>
+  <app-about></app-about>
+  <app-education></app-education>
+  <app-contact></app-contact>
+
+  <footer class="p-6 md:px-12 text-center text-sm text-gray-500">
+    <p>&copy; 2025 {{ data.name() }}. All rights reserved.</p>
+  </footer>
+</div>
