--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -2,6 +2,7 @@
   <app-navbar></app-navbar>
   <app-hero></app-hero>
   <app-projects></app-projects>
+  <app-skills></app-skills>
   <app-about></app-about>
   <app-education></app-education>
   <app-contact></app-contact>
