--- a/portfolio/src/app/components/navbar/navbar.component.html
+++ b/portfolio/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,9 @@
     <a href="#projects" class="text-sm font-medium text-white hover:text-teal-400 transition-colors duration-300">
       Projects
     </a>
+    <a href="#skills" class="text-sm font-medium text-white hover:text-teal-400 transition-colors duration-300">
+      Application & Tool Knowledge
+    </a>
     <a href="#about" class="text-sm font-medium text-white hover:text-teal-400 transition-colors duration-300">
       About
     </a>
@@ -29,6 +32,7 @@
   [ngClass]="{'hidden': !isMenuOpen, 'flex': isMenuOpen}"
   class="md:hidden fixed inset-0 z-40 bg-gray-900 bg-opacity-95 backdrop-blur-md flex-col items-center justify-center space-y-6 transition-all duration-300">
   <a (click)="toggleMenu()" href="#projects" class="text-2xl font-medium text-white hover:text-teal-400">Projects</a>
+  <a (click)="toggleMenu()" href="#skills" class="text-2xl font-medium text-white hover:text-teal-400">Application & Tool Knowledge</a>
   <a (click)="toggleMenu()" href="#about" class="text-2xl font-medium text-white hover:text-teal-400">About</a>
   <a (click)="toggleMenu()" href="#education" class="text-2xl font-medium text-white hover:text-teal-400">Education</a>
   <a (click)="toggleMenu()" href="#contact" class="text-2xl font-medium text-white hover:text-teal-400">Contact</a>
